--- a/backend/docker-compose.yaml
+++ b/backend/docker-compose.yaml
@@ -2,7 +2,8 @@ version: "3.9"
 
 services:
   db:
-    image: postgres:14-bullseye
+    image: postgis/postgis:16-3.4
+    platform: linux/amd64
     container_name: final-project
     ports:
       - 5433:5432
