--- a/frontend/tsconfig.node.json
+++ b/frontend/tsconfig.node.json
@@ -7,7 +7,8 @@
     "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "strict": true,
-    "noEmit": true
+    "noEmit": true,
+    "noUnusedParameters": false
   },
   "include": ["vite.config.ts"]
 }
