--- a/backend/package.json
+++ b/backend/package.json
@@ -13,18 +13,26 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-amplify": "^6.3.8",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "knex": "^3.1.0",
     "pg": "^8.12.0"
   },
   "devDependencies": {
+    "@aws-amplify/backend": "^1.0.3",
+    "@aws-amplify/backend-cli": "^1.0.4",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.8",
+    "aws-cdk": "^2.147.1",
+    "aws-cdk-lib": "^2.147.1",
+    "constructs": "^10.3.0",
+    "esbuild": "^0.21.5",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
+    "tsx": "^4.15.7",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.13.1"
   }
