--- a/.gitignore
+++ b/.gitignore
@@ -26,3 +26,18 @@ dist-ssr
 *.sw?
 
 .env
+
+node_modules/
+.expo/
+dist/
+npm-debug.*
+*.jks
+*.p8
+*.p12
+*.key
+*.mobileprovision
+*.orig.*
+web-build/
+
+# macOS
+.DS_Store
