--- a/app/app.json
+++ b/app/app.json
@@ -14,7 +14,9 @@
     },
     "ios": {
       "supportsTablet": true,
-      "UIBackgroundModes": ["location"]
+      "UIBackgroundModes": [
+        "location"
+      ]
     },
     "android": {
       "adaptiveIcon": {
@@ -35,7 +37,8 @@
           "locationAlwaysPermission": "Allow app to use your location.",
           "isIosBackgroundLocationEnabled": true
         }
-      ]
+      ],
+      "expo-font"
     ],
     "experiments": {
       "typedRoutes": true
