--- a/app/package.json
+++ b/app/package.json
@@ -15,11 +15,14 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo-google-fonts/inter": "^0.2.3",
+    "@expo-google-fonts/sawarabi-mincho": "^0.2.3",
     "@expo/vector-icons": "^14.0.0",
     "@gorhom/bottom-sheet": "^4.6.3",
     "@react-navigation/native": "^6.0.2",
     "axios": "^1.7.2",
     "expo": "~51.0.14",
+    "expo-app-loading": "^2.1.1",
     "expo-constants": "~16.0.2",
     "expo-device": "~6.0.2",
     "expo-font": "~12.0.7",
@@ -36,12 +39,12 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.15.6",
+    "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10",
-    "react-native-reanimated": "~3.10.1",
-    "react-native-gesture-handler": "~2.16.1"
+    "react-native-web": "~0.19.10"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
