apprunner.yaml 変更

--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -1,9 +1,13 @@
 version: 1.0
 runtime: nodejs18
-build:
-  commands:
-    build:
-      - npm run build
+
+run:
+  runtime-version: 18.19.0
+  pre-run:
+    - npm run build
+  command: npm run start
+  network:
+    port: 3000
   env:
     - name: DATABASE
       value: "final_project"
@@ -18,9 +22,3 @@ build:
       value-from: "HOST"
     - name: PASSWORD
       value-from: "PASSWORD"
-
-run:
-  runtime-version: 18.19.0
-  command: npm run start
-  network:
-    port: 3000
