apprunner pre-run変更

--- a/backend/apprunner.yaml
+++ b/backend/apprunner.yaml
@@ -3,12 +3,13 @@ runtime: nodejs18
 build:
   commands:
     build:
-      - echo hoge
+      - npm i
 
 run:
   runtime-version: 18.19.0
   pre-run:
-    - npm run build
+    - npm run migration
+    - npm run seed
   command: npm run start
   network:
     port: 3000
