--- a/app/package.json
+++ b/app/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
+    "android": "expo run:android",
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
@@ -30,6 +30,7 @@
     "expo-gl": "^14.0.2",
     "expo-linking": "~6.3.1",
     "expo-location": "^17.0.1",
+    "expo-media-library": "~16.0.4",
     "expo-notifications": "~0.28.9",
     "expo-permissions": "^14.4.0",
     "expo-router": "~3.5.16",
@@ -49,6 +50,8 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
+    "react-native-view-shot": "3.8.0",
+    "react-native-vision-camera": "^4.4.0",
     "react-native-web": "~0.19.10"
   },
   "devDependencies": {
