--- a/backend/package.json
+++ b/backend/package.json
@@ -21,13 +21,14 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "knex": "^2.5.1",
-    "pg": "^8.0.3",
+    "pg": "^8.12.0",
     "ts-node": "^10.9.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.14.8",
+    "@types/pg": "^8.11.6",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^9.1.0",
     "nodemon": "^3.1.4",
