spots-map フォアグラウンドでの現在地取得に変更
Co-authored-by: hiroki-kon <hiroki-kon@users.noreply.github.com>
Co-authored-by: Ikuo-Matsutori <Ikuo-Matsutori@users.noreply.github.com>

--- a/app/app.json
+++ b/app/app.json
@@ -14,9 +14,11 @@
     },
     "ios": {
       "supportsTablet": true,
-      "UIBackgroundModes": [
-        "location"
-      ]
+      "infoPlist": {
+        "UIBackgroundModes": ["location"],
+
+        "NSLocationWhenInUseUsageDescription": "The Beep App uses your location to pick origins, destinations, and predict ride times"
+      }
     },
     "android": {
       "adaptiveIcon": {
@@ -35,7 +37,7 @@
         "expo-location",
         {
           "locationAlwaysPermission": "Allow app to use your location.",
-          "isIosBackgroundLocationEnabled": true
+          "isIosBackgroundLocationEnabled": false
         }
       ],
       "expo-font"
