--- a/app/package.json
+++ b/app/package.json
@@ -61,6 +61,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/three": "^0.165.0",
     "jest": "^29.2.1",
