--- a/app/package.json
+++ b/app/package.json
@@ -48,6 +48,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.2.1",
     "react-native": "0.74.2",
+    "react-native-dotenv": "^3.4.11",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-maps": "^1.15.6",
     "react-native-reanimated": "~3.10.1",
@@ -61,6 +62,7 @@
     "@babel/core": "^7.20.0",
     "@types/jest": "^29.5.12",
     "@types/react": "~18.2.45",
+    "@types/react-native-dotenv": "^0.2.2",
     "@types/react-native-vector-icons": "^6.4.18",
     "@types/react-test-renderer": "^18.0.7",
     "@types/three": "^0.165.0",
